--- a/index.html
+++ b/index.html
@@ -1,30 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-   <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="src/assets/css/bootstrap.min.css" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/img/logo2.png" />
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="src/assets/img/favicon.png"
+    />
 
-   <!-- Fontawesome CSS -->
-   <link rel="stylesheet" href="src/assets/css/font-awesome.min.css" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="src/assets/css/bootstrap.min.css" />
 
-   <!-- Main CSS -->
-   <link rel="stylesheet" href="src/assets/css/style.css" />
+    <!-- Fontawesome CSS -->
+    <link rel="stylesheet" href="src/assets/css/font-awesome.min.css" />
+
+    <!-- Lineawesome CSS -->
+    <link rel="stylesheet" href="src/assets/css/line-awesome.min.css" />
+
+    <!-- Select2 CSS -->
+    <link rel="stylesheet" href="src/assets/css/select2.min.css" />
+
+    <!-- Datetimepicker CSS -->
+    <link
+      rel="stylesheet"
+      href="src/assets/css/bootstrap-datetimepicker.min.css"
+    />
+
+    <!-- Tagsinput CSS -->
+    <link
+      rel="stylesheet"
+      href="src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css"
+    />
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="src/assets/css/style.css" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>HR Management</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  <!-- jQuery -->
-  <script src="src/assets/js/jquery-3.2.1.min.js"></script>
+    <!-- jQuery -->
+    <script src="src/assets/js/jquery-3.2.1.min.js"></script>
 
-  <!-- Bootstrap Core JS -->
-  <script src="src/assets/js/popper.min.js"></script>
-  <script src="src/assets/js/bootstrap.min.js"></script>
+    <!-- Bootstrap Core JS -->
+    <script src="src/assets/js/popper.min.js"></script>
+    <script src="src/assets/js/bootstrap.min.js"></script>
 
-  <!-- Custom JS -->
-  <script src="src/assets/js/app.js"></script>
+    <!-- Slimscroll JS -->
+    <script src="src/assets/js/jquery.slimscroll.min.js"></script>
+
+    <!-- Select2 JS -->
+    <script src="src/assets/js/select2.min.js"></script>
+
+    <!-- Datetimepicker JS -->
+    <script src="src/assets/js/moment.min.js"></script>
+    <script src="src/assets/js/bootstrap-datetimepicker.min.js"></script>
+
+    <!-- Multiselect JS -->
+    <script src="src/assets/js/multiselect.min.js"></script>
+
+    <!-- Custom JS -->
+    <script src="src/assets/js/app.js"></script>
   </body>
 </html>
