Header , Sidebar , Admin  , Company , Employee Page Added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       type="image/x-icon"
       href="src/assets/img/favicon.png"
     />
-
+<!-- Favicon -->
+        <link rel="shortcut icon" type="image/x-icon" href="src/assets/img/favicon.png">
+		
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="src/assets/css/bootstrap.min.css" />
 
@@ -27,7 +29,8 @@
       rel="stylesheet"
       href="src/assets/css/bootstrap-datetimepicker.min.css"
     />
-
+<!-- Chart CSS -->
+		<link rel="stylesheet" href="src/assets/plugins/morris/morris.css">
     <!-- Tagsinput CSS -->
     <link
       rel="stylesheet"
@@ -63,6 +66,8 @@
 
     <!-- Multiselect JS -->
     <script src="src/assets/js/multiselect.min.js"></script>
+
+  
 
     <!-- Custom JS -->
     <script src="src/assets/js/app.js"></script>
