Calendar added , some bugs fixed

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
       type="image/x-icon"
       href="src/assets/img/favicon.png"
     />
-<!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="src/assets/img/favicon.png">
-		
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="src/assets/img/favicon.png"
+    />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="src/assets/css/bootstrap.min.css" />
 
@@ -29,13 +33,15 @@
       rel="stylesheet"
       href="src/assets/css/bootstrap-datetimepicker.min.css"
     />
-<!-- Chart CSS -->
-		<link rel="stylesheet" href="src/assets/plugins/morris/morris.css">
+    <!-- Chart CSS -->
+    <link rel="stylesheet" href="src/assets/plugins/morris/morris.css" />
     <!-- Tagsinput CSS -->
     <link
       rel="stylesheet"
       href="src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css"
     />
+    <!-- Calendar CSS -->
+    <link rel="stylesheet" href="src/assets/css/fullcalendar.min.css" />
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="src/assets/css/style.css" />
@@ -66,9 +72,11 @@
 
     <!-- Multiselect JS -->
     <script src="src/assets/js/multiselect.min.js"></script>
-
-  
-
+    
+    <!-- Calendar JS -->
+    <script src="src/assets/js/jquery-ui.min.js"></script>
+    <script src="src/assets/js/fullcalendar.min.js"></script>
+    <script src="src/assets/js/jquery.fullcalendar.js"></script>
     <!-- Custom JS -->
     <script src="src/assets/js/app.js"></script>
   </body>
