Profile Page Added

--- a/index.html
+++ b/index.html
@@ -72,11 +72,15 @@
 
     <!-- Multiselect JS -->
     <script src="src/assets/js/multiselect.min.js"></script>
-    
+
     <!-- Calendar JS -->
     <script src="src/assets/js/jquery-ui.min.js"></script>
     <script src="src/assets/js/fullcalendar.min.js"></script>
     <script src="src/assets/js/jquery.fullcalendar.js"></script>
+
+    <!-- Tagsinput JS -->
+    <script src="src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
+
     <!-- Custom JS -->
     <script src="src/assets/js/app.js"></script>
   </body>
