--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 
     <!-- Tagsinput JS -->
     <script src="src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
+<!-- Datatable JS -->
+<script src="src/assets/js/jquery.dataTables.min.js"></script>
+<script src="src/assets/js/dataTables.bootstrap4.min.js"></script>
 
     <!-- Custom JS -->
     <script src="src/assets/js/app.js"></script>
