--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="src/assets/css/style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>HR Management</title>
@@ -79,13 +85,11 @@
 
     <!-- Tagsinput JS -->
     <script src="src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
-<!-- Datatable JS -->
-<script src="src/assets/js/jquery.dataTables.min.js"></script>
-<script src="src/assets/js/dataTables.bootstrap4.min.js"></script>
+    <!-- Datatable JS -->
+    <script src="src/assets/js/jquery.dataTables.min.js"></script>
+    <script src="src/assets/js/dataTables.bootstrap4.min.js"></script>
 
     <!-- Custom JS -->
     <script src="src/assets/js/app.js"></script>
-
-   
   </body>
 </html>
