--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HR Management</title>
     <link rel="icon" type="image/svg+xml" href="src/assets/img/logo2.png" />
     <!-- Favicon -->
     <link
@@ -9,25 +11,14 @@
       type="image/x-icon"
       href="src/assets/img/favicon.png"
     />
-    <!-- Favicon -->
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="src/assets/img/favicon.png"
-    />
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="src/assets/css/bootstrap.min.css" />
-
-    <!-- Fontawesome CSS -->
-    <link rel="stylesheet" href="src/assets/css/font-awesome.min.css" />
-
-    <!-- Lineawesome CSS -->
-    <link rel="stylesheet" href="src/assets/css/line-awesome.min.css" />
-
     <!-- Select2 CSS -->
     <link rel="stylesheet" href="src/assets/css/select2.min.css" />
-
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="src/assets/css/bootstrap.min.css" />
+    <!-- Fontawesome CSS -->
+    <link rel="stylesheet" href="src/assets/css/font-awesome.min.css" />
+    <!-- Lineawesome CSS -->
+    <link rel="stylesheet" href="src/assets/css/line-awesome.min.css" />
     <!-- Datetimepicker CSS -->
     <link
       rel="stylesheet"
@@ -42,54 +33,33 @@
     />
     <!-- Calendar CSS -->
     <link rel="stylesheet" href="src/assets/css/fullcalendar.min.css" />
-
     <!-- Main CSS -->
     <link rel="stylesheet" href="src/assets/css/style.css" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"
-    />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>HR Management</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
     <!-- jQuery -->
     <script src="src/assets/js/jquery-3.2.1.min.js"></script>
-
     <!-- Bootstrap Core JS -->
     <script src="src/assets/js/popper.min.js"></script>
     <script src="src/assets/js/bootstrap.min.js"></script>
-
     <!-- Slimscroll JS -->
     <script src="src/assets/js/jquery.slimscroll.min.js"></script>
-
     <!-- Select2 JS -->
     <script src="src/assets/js/select2.min.js"></script>
-
     <!-- Datetimepicker JS -->
     <script src="src/assets/js/moment.min.js"></script>
     <script src="src/assets/js/bootstrap-datetimepicker.min.js"></script>
-
     <!-- Multiselect JS -->
     <script src="src/assets/js/multiselect.min.js"></script>
-
-    <!-- Calendar JS -->
-    <script src="src/assets/js/jquery-ui.min.js"></script>
-    <script src="src/assets/js/fullcalendar.min.js"></script>
-    <script src="src/assets/js/jquery.fullcalendar.js"></script>
-
     <!-- Tagsinput JS -->
     <script src="src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
     <!-- Datatable JS -->
     <script src="src/assets/js/jquery.dataTables.min.js"></script>
     <script src="src/assets/js/dataTables.bootstrap4.min.js"></script>
-
     <!-- Custom JS -->
     <script src="src/assets/js/app.js"></script>
+    <!-- Your main JavaScript file -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
