Bugs fixed valids added

--- a/index.html
+++ b/index.html
@@ -2,64 +2,94 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>HR Management</title>
-    <link rel="icon" type="image/svg+xml" href="src/assets/img/logo2.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/img/logo2.png"
+    />
     <!-- Favicon -->
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="src/assets/img/favicon.png"
+      href="/src/assets/img/favicon.png"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="/src/assets/css/bootstrap.min.css"
+    />
+    <!-- Fontawesome CSS -->
+    <link
+      rel="stylesheet"
+      href="/src/assets/css/font-awesome.min.css"
+    />
+    <!-- Lineawesome CSS -->
+    <link
+      rel="stylesheet"
+      href="/src/assets/css/line-awesome.min.css"
     />
     <!-- Select2 CSS -->
-    <link rel="stylesheet" href="src/assets/css/select2.min.css" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="src/assets/css/bootstrap.min.css" />
-    <!-- Fontawesome CSS -->
-    <link rel="stylesheet" href="src/assets/css/font-awesome.min.css" />
-    <!-- Lineawesome CSS -->
-    <link rel="stylesheet" href="src/assets/css/line-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="/src/assets/css/select2.min.css"
+    />
     <!-- Datetimepicker CSS -->
     <link
       rel="stylesheet"
-      href="src/assets/css/bootstrap-datetimepicker.min.css"
+      href="/src/assets/css/bootstrap-datetimepicker.min.css"
     />
     <!-- Chart CSS -->
-    <link rel="stylesheet" href="src/assets/plugins/morris/morris.css" />
+    <link
+      rel="stylesheet"
+      href="/src/assets/plugins/morris/morris.css"
+    />
     <!-- Tagsinput CSS -->
     <link
       rel="stylesheet"
-      href="src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css"
+      href="/src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css"
     />
     <!-- Calendar CSS -->
-    <link rel="stylesheet" href="src/assets/css/fullcalendar.min.css" />
+    <link
+      rel="stylesheet"
+      href="/src/assets/css/fullcalendar.min.css"
+    />
     <!-- Main CSS -->
-    <link rel="stylesheet" href="src/assets/css/style.css" />
+    <link rel="stylesheet" href="/src/assets/css/style.css" />
   </head>
   <body>
     <div id="root"></div>
     <!-- jQuery -->
-    <script src="src/assets/js/jquery-3.2.1.min.js"></script>
-    <!-- Bootstrap Core JS -->
-    <script src="src/assets/js/popper.min.js"></script>
-    <script src="src/assets/js/bootstrap.min.js"></script>
+    <script src="/src/assets/js/jquery-3.2.1.min.js"></script>
+    <!-- Popper.js -->
+    <script src="/src/assets/js/popper.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="/src/assets/js/bootstrap.min.js"></script>
     <!-- Slimscroll JS -->
-    <script src="src/assets/js/jquery.slimscroll.min.js"></script>
+    <script src="/src/assets/js/jquery.slimscroll.min.js"></script>
     <!-- Select2 JS -->
-    <script src="src/assets/js/select2.min.js"></script>
+    <script src="/src/assets/js/select2.min.js"></script>
+    <!-- Moment.js -->
+    <script src="/src/assets/js/moment.min.js"></script>
     <!-- Datetimepicker JS -->
-    <script src="src/assets/js/moment.min.js"></script>
-    <script src="src/assets/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="/src/assets/js/bootstrap-datetimepicker.min.js"></script>
     <!-- Multiselect JS -->
-    <script src="src/assets/js/multiselect.min.js"></script>
+    <script src="/src/assets/js/multiselect.min.js"></script>
     <!-- Tagsinput JS -->
-    <script src="src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
-    <!-- Datatable JS -->
-    <script src="src/assets/js/jquery.dataTables.min.js"></script>
-    <script src="src/assets/js/dataTables.bootstrap4.min.js"></script>
+    <script src="/src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
+    <!-- DataTables JS -->
+    <script src="/src/assets/js/jquery.dataTables.min.js"></script>
+    <script src="/src/assets/js/dataTables.bootstrap4.min.js"></script>
     <!-- Custom JS -->
-    <script src="src/assets/js/app.js"></script>
+    <script src="/src/assets/js/app.js"></script>
     <!-- Your main JavaScript file -->
-    <script type="module" src="/src/main.jsx"></script>
+    <script
+      type="module"
+      src="/src/main.jsx"
+    ></script>
   </body>
 </html>
