--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HR Management</title>
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/src/assets/img/logo2.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/img/logo2.png" />
     <!-- Favicon -->
     <link
       rel="shortcut icon"
@@ -19,49 +12,29 @@
       href="/src/assets/img/favicon.png"
     />
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="/src/assets/css/bootstrap.min.css"
-    />
-    <!-- Fontawesome CSS -->
-    <link
-      rel="stylesheet"
-      href="/src/assets/css/font-awesome.min.css"
-    />
-    <!-- Lineawesome CSS -->
-    <link
-      rel="stylesheet"
-      href="/src/assets/css/line-awesome.min.css"
-    />
-    <!-- Select2 CSS -->
-   
+    <link rel="stylesheet" href="/src/assets/css/bootstrap.min.css" />
     <!-- Datetimepicker CSS -->
     <link
       rel="stylesheet"
       href="/src/assets/css/bootstrap-datetimepicker.min.css"
     />
-    <!-- Chart CSS -->
-    <link
-      rel="stylesheet"
-      href="/src/assets/plugins/morris/morris.css"
-    />
+    <!-- Fontawesome CSS -->
+    <link rel="stylesheet" href="/src/assets/css/font-awesome.min.css" />
+    <!-- Lineawesome CSS -->
+    <link rel="stylesheet" href="/src/assets/css/line-awesome.min.css" />
+    <!-- Select2 CSS -->
+    <link rel="stylesheet" href="/src/assets/css/select2.min.css" />
     <!-- Tagsinput CSS -->
     <link
       rel="stylesheet"
       href="/src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css"
     />
+    <!-- Chart CSS -->
+    <link rel="stylesheet" href="/src/assets/plugins/morris/morris.css" />
     <!-- Calendar CSS -->
-    <link
-      rel="stylesheet"
-      href="/src/assets/css/fullcalendar.min.css"
-    />
+    <link rel="stylesheet" href="/src/assets/css/fullcalendar.min.css" />
     <!-- Main CSS -->
     <link rel="stylesheet" href="/src/assets/css/style.css" />
-
-    <link
-    rel="stylesheet"
-    href="/src/assets/css/select2.min.css"
-  />
   </head>
   <body>
     <div id="root"></div>
@@ -73,7 +46,6 @@
     <script src="/src/assets/js/bootstrap.min.js"></script>
     <!-- Slimscroll JS -->
     <script src="/src/assets/js/jquery.slimscroll.min.js"></script>
-    
     <!-- Moment.js -->
     <script src="/src/assets/js/moment.min.js"></script>
     <!-- Datetimepicker JS -->
@@ -85,14 +57,11 @@
     <!-- DataTables JS -->
     <script src="/src/assets/js/jquery.dataTables.min.js"></script>
     <script src="/src/assets/js/dataTables.bootstrap4.min.js"></script>
+    <!-- Select2 JS -->
+    <script src="/src/assets/js/select2.min.js"></script>
     <!-- Custom JS -->
     <script src="/src/assets/js/app.js"></script>
     <!-- Your main JavaScript file -->
-    <script
-      type="module"
-      src="/src/main.jsx"
-    ></script>
-    <!-- Select2 JS -->
-    <script src="/src/assets/js/select2.min.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
